<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">geospy</string>
    <string name="action_settings">Location Service Settings</string>
    <string name="hello_world">To control settings of location services press Menu button. 
    </string>
    <string name="gps">GPS</string>
    <string name="get_location">Get Current Location</string>
    <string name="check_network">Check Network</string>
    <string name="start_spying">Start</string>
    <string name="stop_spying">Stop</string>
    <string name="not_started">Data collection IS NOT started</string>
    <string name="started">Data collection IS started</string>

</resources>